impl/minits/minits.output
Terminals unused in grammar

   _NEWLINE


Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: statement
    3               | statement_list statement

    4 $@1: %empty

    5 function: _FUNCTION _ID _LPAREN parameter_list _RPAREN _COLON _TYPE $@1 body
    6         | _FUNCTION _ID _LPAREN parameter_list _RPAREN body

    7 $@2: %empty

    8 function: _DECLARATION _ID _ASSIGN _FUNCTION _LPAREN parameter_list _RPAREN _COLON _TYPE $@2 body
    9         | _DECLARATION _ID _ASSIGN _FUNCTION _LPAREN parameter_list _RPAREN body

   10 parameter_list: %empty
   11               | parameters

   12 parameters: parameter
   13           | parameters _COMMA parameter

   14 parameter: _ID _COLON _TYPE

   15 body: _LBRACKET statement_list _RBRACKET
   16     | body _SEMICOLON

   17 variable_declaration: _DECLARATION _ID
   18                     | _DECLARATION _ID _COLON _TYPE

   19 statement: compound_statement
   20          | function
   21          | variable_declaration _SEMICOLON
   22          | assignment_statement _SEMICOLON
   23          | inline_assignment _SEMICOLON
   24          | if_statement
   25          | return_statement
   26          | while_loop
   27          | do_while_loop
   28          | function_call _SEMICOLON
   29          | for_loop
   30          | for_iterate_loop
   31          | inc_dec_exp _SEMICOLON
   32          | switch_statement
   33          | try_statement
   34          | enum_statement
   35          | interface_statement

   36 compound_statement: _LBRACKET statement_list _RBRACKET
   37                   | _LBRACKET statement_list _RBRACKET _SEMICOLON

   38 assignment_statement: _ID _ASSIGN num_exp

   39 inline_assignment: _DECLARATION _ID _COLON _TYPE _ASSIGN num_exp
   40                  | _DECLARATION _ID _ASSIGN num_exp

   41 num_exp: exp
   42        | num_exp _AROP exp

   43 exp: literal
   44    | _ID
   45    | function_call
   46    | _LPAREN num_exp _RPAREN
   47    | inc_dec_exp

   48 literal: _NUMBER
   49        | _BIGINT
   50        | _BOOLEAN
   51        | _STRING

   52 function_call: _ID _LPAREN argument_list _RPAREN

   53 argument_list: %empty
   54              | arguments

   55 arguments: argument
   56          | arguments _COMMA argument

   57 argument: num_exp

   58 if_statement: if_part
   59             | if_part _ELSE statement

   60 if_part: _IF _LPAREN rel_exp _RPAREN statement

   61 rel_exp: num_exp _RELOP num_exp

   62 return_statement: _RETURN num_exp _SEMICOLON
   63                 | _RETURN rel_exp _SEMICOLON
   64                 | _RETURN _SEMICOLON

   65 while_loop: _WHILE _LPAREN rel_exp _RPAREN _LBRACKET statement_list _RBRACKET _SEMICOLON

   66 do_while_loop: _DO _LBRACKET statement_list _RBRACKET _WHILE _LPAREN rel_exp _RPAREN _SEMICOLON

   67 for_loop: _FOR _LPAREN first_for_statement _SEMICOLON second_for_statement _SEMICOLON third_for_statement _RPAREN _LBRACKET statement_list _RBRACKET
   68         | for_loop _SEMICOLON

   69 for_iterate_loop: _FOR _LPAREN variable_declaration _IN _ID _RPAREN _LBRACKET statement_list _RBRACKET
   70                 | _FOR _LPAREN _ID _IN _ID _RPAREN _LBRACKET loop_statement_list _RBRACKET
   71                 | _FOR _LPAREN variable_declaration _OF _ID _RPAREN _LBRACKET statement_list _RBRACKET
   72                 | _FOR _LPAREN _ID _OF _ID _RPAREN _LBRACKET loop_statement_list _RBRACKET
   73                 | for_iterate_loop _SEMICOLON

   74 first_for_statement: %empty
   75                    | assignment_statement
   76                    | inline_assignment

   77 second_for_statement: %empty
   78                     | rel_exp

   79 third_for_statement: %empty
   80                    | function_call
   81                    | assignment_statement
   82                    | inc_dec_exp

   83 loop_statement_list: statement
   84                    | break_statement
   85                    | continue_statement

   86 break_statement: _BREAK _SEMICOLON

   87 continue_statement: _CONTINUE _SEMICOLON

   88 inc_dec_exp: _ID _INC
   89            | _INC _ID
   90            | _ID _DEC
   91            | _DEC _ID

   92 switch_statement: _SWITCH _LPAREN exp _RPAREN _LBRACKET case_statements default_statement _RBRACKET
   93                 | switch_statement _SEMICOLON

   94 case_statements: case_statement
   95                | case_statements case_statement

   96 case_statement: _CASE literal _COLON statement_list break_statement

   97 default_statement: %empty
   98                  | _DEFAULT _COLON statement_list

   99 try_statement: try_part catch_finally_part

  100 try_part: _TRY _LBRACKET statement_list _RBRACKET

  101 catch_part: _CATCH _LPAREN _ID _RPAREN _LBRACKET statement_list _RBRACKET
  102           | _CATCH _LBRACKET statement_list _RBRACKET

  103 finally_part: _FINALLY _LBRACKET statement_list _RBRACKET

  104 catch_finally_part: catch_part
  105                   | finally_part
  106                   | catch_part finally_part

  107 enum_statement: _ENUM _ID _LBRACKET enum_list _RBRACKET

  108 enum_list: enum_line _COMMA
  109          | enum_list enum_line _COMMA

  110 enum_line: _ID
  111          | _ID _ASSIGN _NUMBER
  112          | _ID _ASSIGN _STRING

  113 interface_statement: _INTERFACE _ID _LBRACKET _RBRACKET
  114                    | _INTERFACE _ID _LBRACKET interface_elements _RBRACKET

  115 interface_elements: interface_element
  116                   | interface_elements interface_element

  117 interface_element: _ID _COLON _TYPE _SEMICOLON
  118                  | _LPAREN parameter_list _RPAREN _COLON _TYPE _SEMICOLON
  119                  | _ID _COLON _LPAREN parameter_list _RPAREN _ARROW _TYPE _SEMICOLON
  120                  | _ID _LPAREN parameter_list _RPAREN _COLON _TYPE _SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
_TYPE (258) 5 8 14 18 39 117 118 119 120
_DECLARATION (259) 8 9 17 18 39 40
_NEWLINE (260)
_FUNCTION (261) 5 6 8 9
_IF (262) 60
_ELSE (263) 59
_RETURN (264) 62 63 64
_DO (265) 66
_WHILE (266) 65 66
_FOR (267) 67 69 70 71 72
_IN (268) 69 70
_OF (269) 71 72
_BREAK (270) 86
_CONTINUE (271) 87
_SWITCH (272) 92
_CASE (273) 96
_DEFAULT (274) 98
_TRY (275) 100
_CATCH (276) 101 102
_FINALLY (277) 103
_ENUM (278) 107
_INTERFACE (279) 113 114
_INC (280) 88 89
_DEC (281) 90 91
_ID (282) 5 6 8 9 14 17 18 38 39 40 44 52 69 70 71 72 88 89 90 91 101
    107 110 111 112 113 114 117 119 120
_NUMBER (283) 48 111
_BIGINT (284) 49
_BOOLEAN (285) 50
_STRING (286) 51 112
_LPAREN (287) 5 6 8 9 46 52 60 65 66 67 69 70 71 72 92 101 118 119
    120
_RPAREN (288) 5 6 8 9 46 52 60 65 66 67 69 70 71 72 92 101 118 119
    120
_LBRACKET (289) 15 36 37 65 66 67 69 70 71 72 92 100 101 102 103 107
    113 114
_RBRACKET (290) 15 36 37 65 66 67 69 70 71 72 92 100 101 102 103 107
    113 114
_ASSIGN (291) 8 9 38 39 40 111 112
_COLON (292) 5 8 14 18 39 96 98 117 118 119 120
_SEMICOLON (293) 16 21 22 23 28 31 37 62 63 64 65 66 67 68 73 86 87
    93 117 118 119 120
_AROP (294) 42
_RELOP (295) 61
_ARROW (296) 119
_COMMA (297) 13 56 108 109
ONLY_IF (298)


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
program (45)
    on left: 1, on right: 0
statement_list (46)
    on left: 2 3, on right: 1 3 15 36 37 65 66 67 69 71 96 98 100 101
    102 103
function (47)
    on left: 5 6 8 9, on right: 20
$@1 (48)
    on left: 4, on right: 5
$@2 (49)
    on left: 7, on right: 8
parameter_list (50)
    on left: 10 11, on right: 5 6 8 9 118 119 120
parameters (51)
    on left: 12 13, on right: 11 13
parameter (52)
    on left: 14, on right: 12 13
body (53)
    on left: 15 16, on right: 5 6 8 9 16
variable_declaration (54)
    on left: 17 18, on right: 21 69 71
statement (55)
    on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35, on right:
    2 3 59 60 83
compound_statement (56)
    on left: 36 37, on right: 19
assignment_statement (57)
    on left: 38, on right: 22 75 81
inline_assignment (58)
    on left: 39 40, on right: 23 76
num_exp (59)
    on left: 41 42, on right: 38 39 40 42 46 57 61 62
exp (60)
    on left: 43 44 45 46 47, on right: 41 42 92
literal (61)
    on left: 48 49 50 51, on right: 43 96
function_call (62)
    on left: 52, on right: 28 45 80
argument_list (63)
    on left: 53 54, on right: 52
arguments (64)
    on left: 55 56, on right: 54 56
argument (65)
    on left: 57, on right: 55 56
if_statement (66)
    on left: 58 59, on right: 24
if_part (67)
    on left: 60, on right: 58 59
rel_exp (68)
    on left: 61, on right: 60 63 65 66 78
return_statement (69)
    on left: 62 63 64, on right: 25
while_loop (70)
    on left: 65, on right: 26
do_while_loop (71)
    on left: 66, on right: 27
for_loop (72)
    on left: 67 68, on right: 29 68
for_iterate_loop (73)
    on left: 69 70 71 72 73, on right: 30 73
first_for_statement (74)
    on left: 74 75 76, on right: 67
second_for_statement (75)
    on left: 77 78, on right: 67
third_for_statement (76)
    on left: 79 80 81 82, on right: 67
loop_statement_list (77)
    on left: 83 84 85, on right: 70 72
break_statement (78)
    on left: 86, on right: 84 96
continue_statement (79)
    on left: 87, on right: 85
inc_dec_exp (80)
    on left: 88 89 90 91, on right: 31 47 82
switch_statement (81)
    on left: 92 93, on right: 32 93
case_statements (82)
    on left: 94 95, on right: 92 95
case_statement (83)
    on left: 96, on right: 94 95
default_statement (84)
    on left: 97 98, on right: 92
try_statement (85)
    on left: 99, on right: 33
try_part (86)
    on left: 100, on right: 99
catch_part (87)
    on left: 101 102, on right: 104 106
finally_part (88)
    on left: 103, on right: 105 106
catch_finally_part (89)
    on left: 104 105 106, on right: 99
enum_statement (90)
    on left: 107, on right: 34
enum_list (91)
    on left: 108 109, on right: 107 109
enum_line (92)
    on left: 110 111 112, on right: 108 109
interface_statement (93)
    on left: 113 114, on right: 35
interface_elements (94)
    on left: 115 116, on right: 114 116
interface_element (95)
    on left: 117 118 119 120, on right: 115 116


State 0

    0 $accept: . program $end

    _DECLARATION  shift, and go to state 1
    _FUNCTION     shift, and go to state 2
    _IF           shift, and go to state 3
    _RETURN       shift, and go to state 4
    _DO           shift, and go to state 5
    _WHILE        shift, and go to state 6
    _FOR          shift, and go to state 7
    _SWITCH       shift, and go to state 8
    _TRY          shift, and go to state 9
    _ENUM         shift, and go to state 10
    _INTERFACE    shift, and go to state 11
    _INC          shift, and go to state 12
    _DEC          shift, and go to state 13
    _ID           shift, and go to state 14
    _LBRACKET     shift, and go to state 15

    program               go to state 16
    statement_list        go to state 17
    function              go to state 18
    variable_declaration  go to state 19
    statement             go to state 20
    compound_statement    go to state 21
    assignment_statement  go to state 22
    inline_assignment     go to state 23
    function_call         go to state 24
    if_statement          go to state 25
    if_part               go to state 26
    return_statement      go to state 27
    while_loop            go to state 28
    do_while_loop         go to state 29
    for_loop              go to state 30
    for_iterate_loop      go to state 31
    inc_dec_exp           go to state 32
    switch_statement      go to state 33
    try_statement         go to state 34
    try_part              go to state 35
    enum_statement        go to state 36
    interface_statement   go to state 37


State 1

    8 function: _DECLARATION . _ID _ASSIGN _FUNCTION _LPAREN parameter_list _RPAREN _COLON _TYPE $@2 body
    9         | _DECLARATION . _ID _ASSIGN _FUNCTION _LPAREN parameter_list _RPAREN body
   17 variable_declaration: _DECLARATION . _ID
   18                     | _DECLARATION . _ID _COLON _TYPE
   39 inline_assignment: _DECLARATION . _ID _COLON _TYPE _ASSIGN num_exp
   40                  | _DECLARATION . _ID _ASSIGN num_exp

    _ID  shift, and go to state 38


State 2

    5 function: _FUNCTION . _ID _LPAREN parameter_list _RPAREN _COLON _TYPE $@1 body
    6         | _FUNCTION . _ID _LPAREN parameter_list _RPAREN body

    _ID  shift, and go to state 39


State 3

   60 if_part: _IF . _LPAREN rel_exp _RPAREN statement

    _LPAREN  shift, and go to state 40


State 4

   62 return_statement: _RETURN . num_exp _SEMICOLON
   63                 | _RETURN . rel_exp _SEMICOLON
   64                 | _RETURN . _SEMICOLON

    _INC        shift, and go to state 12
    _DEC        shift, and go to state 13
    _ID         shift, and go to state 41
    _NUMBER     shift, and go to state 42
    _BIGINT     shift, and go to state 43
    _BOOLEAN    shift, and go to state 44
    _STRING     shift, and go to state 45
    _LPAREN     shift, and go to state 46
    _SEMICOLON  shift, and go to state 47

    num_exp        go to state 48
    exp            go to state 49
    literal        go to state 50
    function_call  go to state 51
    rel_exp        go to state 52
    inc_dec_exp    go to state 53


State 5

   66 do_while_loop: _DO . _LBRACKET statement_list _RBRACKET _WHILE _LPAREN rel_exp _RPAREN _SEMICOLON

    _LBRACKET  shift, and go to state 54


State 6

   65 while_loop: _WHILE . _LPAREN rel_exp _RPAREN _LBRACKET statement_list _RBRACKET _SEMICOLON

    _LPAREN  shift, and go to state 55


State 7

   67 for_loop: _FOR . _LPAREN first_for_statement _SEMICOLON second_for_statement _SEMICOLON third_for_statement _RPAREN _LBRACKET statement_list _RBRACKET
   69 for_iterate_loop: _FOR . _LPAREN variable_declaration _IN _ID _RPAREN _LBRACKET statement_list _RBRACKET
   70                 | _FOR . _LPAREN _ID _IN _ID _RPAREN _LBRACKET loop_statement_list _RBRACKET
   71                 | _FOR . _LPAREN variable_declaration _OF _ID _RPAREN _LBRACKET statement_list _RBRACKET
   72                 | _FOR . _LPAREN _ID _OF _ID _RPAREN _LBRACKET loop_statement_list _RBRACKET

    _LPAREN  shift, and go to state 56


State 8

   92 switch_statement: _SWITCH . _LPAREN exp _RPAREN _LBRACKET case_statements default_statement _RBRACKET

    _LPAREN  shift, and go to state 57


State 9

  100 try_part: _TRY . _LBRACKET statement_list _RBRACKET

    _LBRACKET  shift, and go to state 58


State 10

  107 enum_statement: _ENUM . _ID _LBRACKET enum_list _RBRACKET

    _ID  shift, and go to state 59


State 11

  113 interface_statement: _INTERFACE . _ID _LBRACKET _RBRACKET
  114                    | _INTERFACE . _ID _LBRACKET interface_elements _RBRACKET

    _ID  shift, and go to state 60


State 12

   89 inc_dec_exp: _INC . _ID

    _ID  shift, and go to state 61


State 13

   91 inc_dec_exp: _DEC . _ID

    _ID  shift, and go to state 62


State 14

   38 assignment_statement: _ID . _ASSIGN num_exp
   52 function_call: _ID . _LPAREN argument_list _RPAREN
   88 inc_dec_exp: _ID . _INC
   90            | _ID . _DEC

    _INC     shift, and go to state 63
    _DEC     shift, and go to state 64
    _LPAREN  shift, and go to state 65
    _ASSIGN  shift, and go to state 66


State 15

   36 compound_statement: _LBRACKET . statement_list _RBRACKET
   37                   | _LBRACKET . statement_list _RBRACKET _SEMICOLON

    _DECLARATION  shift, and go to state 1
    _FUNCTION     shift, and go to state 2
    _IF           shift, and go to state 3
    _RETURN       shift, and go to state 4
    _DO           shift, and go to state 5
    _WHILE        shift, and go to state 6
    _FOR          shift, and go to state 7
    _SWITCH       shift, and go to state 8
    _TRY          shift, and go to state 9
    _ENUM         shift, and go to state 10
    _INTERFACE    shift, and go to state 11
    _INC          shift, and go to state 12
    _DEC          shift, and go to state 13
    _ID           shift, and go to state 14
    _LBRACKET     shift, and go to state 15

    statement_list        go to state 67
    function              go to state 18
    variable_declaration  go to state 19
    statement             go to state 20
    compound_statement    go to state 21
    assignment_statement  go to state 22
    inline_assignment     go to state 23
    function_call         go to state 24
    if_statement          go to state 25
    if_part               go to state 26
    return_statement      go to state 27
    while_loop            go to state 28
    do_while_loop         go to state 29
    for_loop              go to state 30
    for_iterate_loop      go to state 31
    inc_dec_exp           go to state 32
    switch_statement      go to state 33
    try_statement         go to state 34
    try_part              go to state 35
    enum_statement        go to state 36
    interface_statement   go to state 37


State 16

    0 $accept: program . $end

    $end  shift, and go to state 68


State 17

    1 program: statement_list .
    3 statement_list: statement_list . statement

    _DECLARATION  shift, and go to state 1
    _FUNCTION     shift, and go to state 2
    _IF           shift, and go to state 3
    _RETURN       shift, and go to state 4
    _DO           shift, and go to state 5
    _WHILE        shift, and go to state 6
    _FOR          shift, and go to state 7
    _SWITCH       shift, and go to state 8
    _TRY          shift, and go to state 9
    _ENUM         shift, and go to state 10
    _INTERFACE    shift, and go to state 11
    _INC          shift, and go to state 12
    _DEC          shift, and go to state 13
    _ID           shift, and go to state 14
    _LBRACKET     shift, and go to state 15

    $default  reduce using rule 1 (program)

    function              go to state 18
    variable_declaration  go to state 19
    statement             go to state 69
    compound_statement    go to state 21
    assignment_statement  go to state 22
    inline_assignment     go to state 23
    function_call         go to state 24
    if_statement          go to state 25
    if_part               go to state 26
    return_statement      go to state 27
    while_loop            go to state 28
    do_while_loop         go to state 29
    for_loop              go to state 30
    for_iterate_loop      go to state 31
    inc_dec_exp           go to state 32
    switch_statement      go to state 33
    try_statement         go to state 34
    try_part              go to state 35
    enum_statement        go to state 36
    interface_statement   go to state 37


State 18

   20 statement: function .

    $default  reduce using rule 20 (statement)


State 19

   21 statement: variable_declaration . _SEMICOLON

    _SEMICOLON  shift, and go to state 70


State 20

    2 statement_list: statement .

    $default  reduce using rule 2 (statement_list)


State 21

   19 statement: compound_statement .

    $default  reduce using rule 19 (statement)


State 22

   22 statement: assignment_statement . _SEMICOLON

    _SEMICOLON  shift, and go to state 71


State 23

   23 statement: inline_assignment . _SEMICOLON

    _SEMICOLON  shift, and go to state 72


State 24

   28 statement: function_call . _SEMICOLON

    _SEMICOLON  shift, and go to state 73


State 25

   24 statement: if_statement .

    $default  reduce using rule 24 (statement)


State 26

   58 if_statement: if_part .
   59             | if_part . _ELSE statement

    _ELSE  shift, and go to state 74

    $default  reduce using rule 58 (if_statement)


State 27

   25 statement: return_statement .

    $default  reduce using rule 25 (statement)


State 28

   26 statement: while_loop .

    $default  reduce using rule 26 (statement)


State 29

   27 statement: do_while_loop .

    $default  reduce using rule 27 (statement)


State 30

   29 statement: for_loop .
   68 for_loop: for_loop . _SEMICOLON

    _SEMICOLON  shift, and go to state 75

    $default  reduce using rule 29 (statement)


State 31

   30 statement: for_iterate_loop .
   73 for_iterate_loop: for_iterate_loop . _SEMICOLON

    _SEMICOLON  shift, and go to state 76

    $default  reduce using rule 30 (statement)


State 32

   31 statement: inc_dec_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 77


State 33

   32 statement: switch_statement .
   93 switch_statement: switch_statement . _SEMICOLON

    _SEMICOLON  shift, and go to state 78

    $default  reduce using rule 32 (statement)


State 34

   33 statement: try_statement .

    $default  reduce using rule 33 (statement)


State 35

   99 try_statement: try_part . catch_finally_part

    _CATCH    shift, and go to state 79
    _FINALLY  shift, and go to state 80

    catch_part          go to state 81
    finally_part        go to state 82
    catch_finally_part  go to state 83


State 36

   34 statement: enum_statement .

    $default  reduce using rule 34 (statement)


State 37

   35 statement: interface_statement .

    $default  reduce using rule 35 (statement)


State 38

    8 function: _DECLARATION _ID . _ASSIGN _FUNCTION _LPAREN parameter_list _RPAREN _COLON _TYPE $@2 body
    9         | _DECLARATION _ID . _ASSIGN _FUNCTION _LPAREN parameter_list _RPAREN body
   17 variable_declaration: _DECLARATION _ID .
   18                     | _DECLARATION _ID . _COLON _TYPE
   39 inline_assignment: _DECLARATION _ID . _COLON _TYPE _ASSIGN num_exp
   40                  | _DECLARATION _ID . _ASSIGN num_exp

    _ASSIGN  shift, and go to state 84
    _COLON   shift, and go to state 85

    $default  reduce using rule 17 (variable_declaration)


State 39

    5 function: _FUNCTION _ID . _LPAREN parameter_list _RPAREN _COLON _TYPE $@1 body
    6         | _FUNCTION _ID . _LPAREN parameter_list _RPAREN body

    _LPAREN  shift, and go to state 86


State 40

   60 if_part: _IF _LPAREN . rel_exp _RPAREN statement

    _INC      shift, and go to state 12
    _DEC      shift, and go to state 13
    _ID       shift, and go to state 41
    _NUMBER   shift, and go to state 42
    _BIGINT   shift, and go to state 43
    _BOOLEAN  shift, and go to state 44
    _STRING   shift, and go to state 45
    _LPAREN   shift, and go to state 46

    num_exp        go to state 87
    exp            go to state 49
    literal        go to state 50
    function_call  go to state 51
    rel_exp        go to state 88
    inc_dec_exp    go to state 53


State 41

   44 exp: _ID .
   52 function_call: _ID . _LPAREN argument_list _RPAREN
   88 inc_dec_exp: _ID . _INC
   90            | _ID . _DEC

    _INC     shift, and go to state 63
    _DEC     shift, and go to state 64
    _LPAREN  shift, and go to state 65

    $default  reduce using rule 44 (exp)


State 42

   48 literal: _NUMBER .

    $default  reduce using rule 48 (literal)


State 43

   49 literal: _BIGINT .

    $default  reduce using rule 49 (literal)


State 44

   50 literal: _BOOLEAN .

    $default  reduce using rule 50 (literal)


State 45

   51 literal: _STRING .

    $default  reduce using rule 51 (literal)


State 46

   46 exp: _LPAREN . num_exp _RPAREN

    _INC      shift, and go to state 12
    _DEC      shift, and go to state 13
    _ID       shift, and go to state 41
    _NUMBER   shift, and go to state 42
    _BIGINT   shift, and go to state 43
    _BOOLEAN  shift, and go to state 44
    _STRING   shift, and go to state 45
    _LPAREN   shift, and go to state 46

    num_exp        go to state 89
    exp            go to state 49
    literal        go to state 50
    function_call  go to state 51
    inc_dec_exp    go to state 53


State 47

   64 return_statement: _RETURN _SEMICOLON .

    $default  reduce using rule 64 (return_statement)


State 48

   42 num_exp: num_exp . _AROP exp
   61 rel_exp: num_exp . _RELOP num_exp
   62 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 90
    _AROP       shift, and go to state 91
    _RELOP      shift, and go to state 92


State 49

   41 num_exp: exp .

    $default  reduce using rule 41 (num_exp)


State 50

   43 exp: literal .

    $default  reduce using rule 43 (exp)


State 51

   45 exp: function_call .

    $default  reduce using rule 45 (exp)


State 52

   63 return_statement: _RETURN rel_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 93


State 53

   47 exp: inc_dec_exp .

    $default  reduce using rule 47 (exp)


State 54

   66 do_while_loop: _DO _LBRACKET . statement_list _RBRACKET _WHILE _LPAREN rel_exp _RPAREN _SEMICOLON
